[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-intelligence"
version = "0.1.0"
description = "Decision intelligence workspace with API, graph, UI, and eval components."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3.0",
  "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "httpx>=0.27,<1.0",
  "supabase>=2.7,<3.0",
]
graph = [
  "langgraph>=0.2.50,<1.0",
  "langchain>=0.3,<1.0",
  "networkx>=3.3,<4.0",
]
ui = [
  "streamlit>=1.39,<2.0",
  "plotly>=5.24,<6.0",
]
evals = [
  "pandas>=2.2,<3.0",
  "numpy>=2.1,<3.0",
  "pytest>=8.3,<9.0",
  "scikit-learn>=1.5,<2.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["shared*"]
